syntax = "proto3";

package org.drasyl.remote.protocol;

message PublicHeader {
    bytes nonce = 1; // 24 bytes fix
    sint32 networkId = 2; // up to 4 bytes
    bytes sender = 3; // 32 bytes fix
    sint32 proofOfWork = 4; // up to 4 bytes
    bytes recipient = 5; // 32 bytes fix
    uint32 hopCount = 6; // 1 byte fix (by definition, only values between 1 and 127 are allowed)
    bytes agreementId = 7; // 32 bytes fix (SHA-256 hash of both public key agreement keys)
}

message PrivateHeader {
    MessageType type = 1;
}

enum MessageType {
    ACKNOWLEDGEMENT = 0;
    APPLICATION = 1;
    DISCOVERY = 2;
    UNITE = 3;
    KEY_EXCHANGE = 4;
    KEY_EXCHANGE_ACKNOWLEDGEMENT = 5;
}

message Acknowledgement {
    bytes correspondingId = 1; // 24 bytes fix from previous nonce
}

message Discovery {
    uint64 childrenTime = 1;
}

message Unite {
    bytes publicKey = 1; // 33 bytes fix
    oneof address {
        fixed32 addressV4 = 2; // 4 bytes fix
        bytes addressV6 = 3; // 16 bytes fix
    }
    uint32 port = 4; // 2 bytes fix
}

message KeyExchange {
    bytes sessionKey = 1; // 32 bytes fix
}

message KeyExchangeAcknowledgement {
    bytes agreementId = 1; // 32 bytes fix (SHA-256 hash of both public key agreement keys)
}
